# BSA_Migration

./: .gitignore  README.md  config.env  main.py  pyproject.toml
api/: activities.py
pages/: activities_page.py  config_page.py  scouts_page.py  theme.py
